--- a/client/styles.css
+++ b/client/styles.css
@@ -25,6 +25,11 @@ body {
   flex-wrap: wrap;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* ensures it stays on top of other content */
 }
 
 .navbar-logo {
@@ -186,35 +191,25 @@ body {
    
     
 }
-.col-lg-3{
-  height: 10em;
-}
-.statblue{
-  background-color:rgb(21, 21, 204);
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  display: flex;
-  color: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  height: 100%;
-  /* margin: 0px 0 10px 0px; */
 
+
+.bg-blue {
+    background-color: #0d6efd; 
 }
 
-.statblack{
-  background-color:black;
-  align-items: center;
-  text-align: center;
-  color:white;
-  border-radius: 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  height: 100%;
-  /* margin: 10px 0 0 0px; */
+.bg-black {
+    background-color: #212529; 
 }
 
-
+.card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: white; 
+    padding: 20px;
+}
 
 
 
